--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
@@ -132,7 +132,7 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 Oct 1988</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://mvasquezgh.github.io/portfolio/">Portfolio </a></span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><a href="https://www.linkedin.com/in/misael-vasquez-b8724a169/">LinkedIn </a></span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:18493432980">1 849 343 2980 </a></span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santo Domingo, Dominican Republic</span></li>
                                 </ul>
